--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
+    "dotenv": "^16.3.1",
     "vite": "^4.3.9"
   },
   "devDependencies": {
